--- a/app/templates/achievements.hbs
+++ b/app/templates/achievements.hbs
@@ -1,7 +1,7 @@
 <section id="achievements" class="container content-section">
   <h2>Trofeje</h2>
     <hr>
-    <div class="panel-body panel-profile-achievement">
+    <div class="panel-body panel-achievement-list">
       {{#each model as |achievement|}}
           {{achievement-big model=achievement}}
       {{else}}
