--- a/app/templates/components/achievement-big.hbs
+++ b/app/templates/components/achievement-big.hbs
@@ -1,4 +1,4 @@
-<div class="panel panel-profile single-profile-achievement">
+<div class="panel-achievements single-list-achievement">
     {{#link-to 'achievements' class='noContent'}}
         <img width="100%;" src="{{model.picture}}" alt="{{{model.title}}}" title="{{{model.title}}}">
     {{/link-to}}
