Use standard bootstrap grid.

--- a/app/templates/components/achievement-big.hbs
+++ b/app/templates/components/achievement-big.hbs
@@ -1,11 +1,13 @@
-<div class="panel-achievements single-list-achievement">
-    <img width="100%;" src="{{model.picture}}" alt="{{{model.title}}}" title="{{{model.title}}}">
-    <div class="achievement-text">
-        <div class="achievement-text-name">
-            <h4 class="achievement-text-name">{{{model.title}}}</h4>
-        </div>
-        <div class="achievement-text-description">
-            {{{model.description}}}
+<div class="single-list-achievement col-xs-12 col-sm-4 col-md-3">
+    <div class="panel-achievements">
+        <img width="100%;" src="{{model.picture}}" alt="{{{model.title}}}" title="{{{model.title}}}">
+        <div class="achievement-text">
+            <div class="achievement-text-name">
+                <h4 class="achievement-text-name">{{{model.title}}}</h4>
+            </div>
+            <div class="achievement-text-description">
+                {{{model.description}}}
+            </div>
         </div>
     </div>
 </div>
