--- a/app/styles/components/panels.scss
+++ b/app/styles/components/panels.scss
@@ -66,7 +66,9 @@
 }
 
 .panel-achievements {
-  background: ksi-color-level('primary-orange', 8);
+    background: ksi-color-level('primary-orange', 8);
+    height: 100%;
+    padding: 15px;
 }
 
 .panel-profile-assignment {
@@ -85,29 +87,8 @@
 }
 
 .single-list-achievement {
-    padding: 15px;
-//    width: 22%;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    min-width: 200px;
-}
-
-@media screen and (min-width: 500px) {
-    .single-list-achievement {
-        width: 45%;
-    }
-}
-
-@media screen and (min-width: 900px) {
-    .single-list-achievement {
-        width: 31%;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .single-list-achievement {
-        width: 22%;
-    }
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 h4.achievement-text-name {
