sorting + minor stuff
It took me more than 8 hours to get the sorting working as intended. It
seems like there were 4 ways in total to sort a collection of responses.
In our version of Ember one isn't implemented yet, one is deprecated and
removed, one doesn't work.
¯\_(ツ)_/¯
The outcome is changing 3 lines…

Closes #326
Ref #322

--- a/app/templates/admin/achievement-grant.hbs
+++ b/app/templates/admin/achievement-grant.hbs
@@ -28,8 +28,8 @@
 
             <label>Přidat uživatele:</label>
              {{#x-select value=add_user class="form-control"}}
-              {{#each model.users as |user|}}
-                {{#x-option value=user}}{{user.full_name}} (id {{user.id}}){{/x-option}}
+              {{#each sorted_users as |user|}}
+                {{#x-option value=user}}{{user.surname_first_name}} (id {{user.id}}){{/x-option}}
               {{/each}}
             {{/x-select}}
             <button class="btn btn-primary inline" {{action "add-user"}}>Přidat uživatele</button>
