--- a/app/styles/base/links.scss
+++ b/app/styles/base/links.scss
@@ -33,3 +33,7 @@ a.header-link:active {
 .noContent:hover {
     text-decoration: none;
 }
+
+.noLinkDecoration:hover {
+    text-decoration: none;
+}
