sortable reload fix, https, datetime
Closes #329
Closes #327

--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -8,15 +8,15 @@
                       <div class="row row-centered">
                         <a href="mailto:ksi@fi.muni.cz" title="ksi@fi.muni.cz" class="footer-logo inline-footer" id="mail-logo"></a>
                         <a href="https://www.facebook.com/ksi.fi.muni" title="Facebook"class="footer-logo inline-footer" id="facebook-logo"></a>
-                        <a href="http://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo inline-footer" id="fi-logo"></a>
-                        <a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo inline-footer" id="mu-logo"></a>
-                        <a href="http://kscuk.fi.muni.cz/" title="K-SCUK" class="footer-logo inline-footer" id="kscuk-logo"></a>
-                        <a href="http://intersob.math.muni.cz" title="Soutěž InterSoB" class="footer-logo inline-footer" id="sob-logo"></a>
-                        <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
-                        <a href="http://zverinec.fi.muni.cz" title="Spolek přátel severské zvěře" class="footer-logo inline-footer" id="zverinec-logo"></a>
+                        <a href="https://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo inline-footer" id="fi-logo"></a>
+                        <a href="https://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo inline-footer" id="mu-logo"></a>
+                        <a href="https://kscuk.fi.muni.cz/" title="K-SCUK" class="footer-logo inline-footer" id="kscuk-logo"></a>
+                        <a href="https://intersob.math.muni.cz" title="Soutěž InterSoB" class="footer-logo inline-footer" id="sob-logo"></a>
+                        <a href="https://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
+                        <a href="https://zverinec.fi.muni.cz" title="Spolek přátel severské zvěře" class="footer-logo inline-footer" id="zverinec-logo"></a>
                         <a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo inline-footer" id="brkos-logo"></a>
                         <a href="http://ibis.sci.muni.cz/" title="Interaktivní BIologický Seminář" class="footer-logo inline-footer" id="ibis-logo"></a>
-                        <a href="http://ksp.mff.cuni.cz" title="Korespondenční seminář z programování" class="footer-logo inline-footer" id="ksp-logo"></a>
+                        <a href="https://ksp.mff.cuni.cz" title="Korespondenční seminář z programování" class="footer-logo inline-footer" id="ksp-logo"></a>
                         <a href="https://www.youtube.com/channel/UCH0K2_tAhkJNlvfRo5NsEIg" title="YouTube" class="footer-logo inline-footer" id="youtube-logo"></a>
                         <a href="https://github.com/fi-ksi" title="KSI @ GitHub" class="footer-logo inline-footer" id="github-logo"></a>
                       </div>
