--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -45,7 +45,7 @@
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <a href="http://kscuk.fi.muni.cz/">
+            <a href="https://kscuk.fi.muni.cz/">
               <img src="img/info-kscuk.svg" style="max-width:90%;"/>
             </a>
             <p class="about-paragraph autojustify" style="font-size:18px;">
