--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -15,7 +15,7 @@
     </p>
     <p>
     S&nbsp;ostatními účastníky i&nbsp;organizátory semináře se můžeš během roku potkat na několika výletech.
-    Koncem školního roku pak vyhlásíme výsledky a&nbsp;nejlepší řešitele pozveme na <a href="http://kscuk.fi.muni.cz/">týdenní soustředění K-SCUK</a>.
+    Koncem školního roku pak vyhlásíme výsledky a&nbsp;nejlepší řešitele pozveme na <a href="https://kscuk.fi.muni.cz/">týdenní soustředění K-SCUK</a>.
     Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60&nbsp;% celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.
     </p>
 
@@ -41,7 +41,7 @@
 
     <li><p>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</p></li>
 
-    <li><p>A&nbsp;hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v&nbsp;podobě <a href="http://kscuk.fi.muni.cz/">týdenního soustředění</a>.</p></li>
+    <li><p>A&nbsp;hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v&nbsp;podobě <a href="https://kscuk.fi.muni.cz/">týdenního soustředění</a>.</p></li>
 
     </ul>
 
