--- a/app/templates/admin/export.hbs
+++ b/app/templates/admin/export.hbs
@@ -15,8 +15,8 @@
       <div class="form-group">
         <label>Obrázek:</label>
         <select>
-         <option><img src="http://placehold.it/30x30">daco.jpg</option> <!-- TODO obrazky z databaze -->
-         <option><img src="http://placehold.it/30x30">daco.jpg</option>
+         <option><img src="https://placehold.it/30x30">daco.jpg</option> <!-- TODO obrazky z databaze -->
+         <option><img src="https://placehold.it/30x30">daco.jpg</option>
         </select>
       </div>
 
