--- a/app/templates/components/sortable-module.hbs
+++ b/app/templates/components/sortable-module.hbs
@@ -6,7 +6,7 @@
         <div class="col-xs-12 col-sm-6">
             <h5>Výsledek:</h5>
             <ul class="sortable list" id="sortable{{module.id}}a" style="min-height: 100px; min-width:50%;">
-                {{#each module.sortable_list.fixed as |line index|}}
+                {{#each sortable_list_internal.fixed as |line index|}}
                     <li draggable="true" class="{{line.style}} static" id="a{{index}}" data-offset="{{line.offset}}">{{{line.content}}}</li>
                 {{/each}}
             </ul>
@@ -14,7 +14,7 @@
         <div class="col-xs-12 col-sm-6">
             <h5>Použij tyto řádky:</h5>
             <ul class="sortable list" id="sortable{{module.id}}b" style="min-height: 100px; min-width:50%;">
-                {{#each module.sortable_list.movable as |line index|}}
+                {{#each sortable_list_internal.movable as |line index|}}
                     <li draggable="true" class="{{line.style}} highlight" id="b{{index}}" data-offset="{{line.offset}}">{{{line.content}}}</li>
                 {{/each}}
             </ul>
