enables html in module name
Closes #330

--- a/app/templates/components/module-wrap.hbs
+++ b/app/templates/components/module-wrap.hbs
@@ -1,6 +1,6 @@
 <div class="panel panel-module-{{module-type module.state}}" style="margin-left:0px">
   <div class="panel-heading panel-heading-module-{{module-type module.state}}">
-      {{module.name}}
+      {{{module.name}}}
 
       {{#if session.current_user.organisator}}
       ({{module.id}})
