--- a/app/templates/components/correction-module.hbs
+++ b/app/templates/components/correction-module.hbs
@@ -1,6 +1,6 @@
 <div class="panel panel-ksi">
 <div class="panel-heading panel-heading-ksi">
-   {{parent_module.name}}
+   {{{parent_module.name}}}
 
     {{#if module.evaluation.general}}(souborový modul){{/if}}
     {{#if module.evaluation.quiz}}(kvíz){{/if}}
