--- a/app/templates/task/evaluation.hbs
+++ b/app/templates/task/evaluation.hbs
@@ -43,7 +43,7 @@
         <tbody>
           {{#each model.details.modules as |module|}}
             <tr>
-              <td style="text-align: center;">{{module.name}}</td>
+              <td style="text-align: center;">{{{module.name}}}</td>
               <td>
                 {{#if module.score.is_corrected}}
                   {{#link-to "user-profile" module.score.reviewed_by}}
