Updating fi muni bachelor link

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -71,7 +71,7 @@
     <div class="panel panel-ksi">
       <div class="panel-heading panel-heading-ksi">Q: Budu-li úspěšný řešitel KSI např. v&nbsp;2.&nbsp;ročníku, budu po maturitě přijat na FI bez přijímaček?</div>
       <div class="panel-body">
-        A: Téměř určitě ano. Organizátoři KSI ale nemohou hovořit za fakultu v otázce přijímacího řízení, proto doporučujeme zjistit aktuální informace na <a href="https://www.fi.muni.cz/admission/bachelor/index.xhtml.cs">oficiálních stránkách Fakulty informatiky MU</a>.
+        A: Téměř určitě ano. Organizátoři KSI ale nemohou hovořit za fakultu v otázce přijímacího řízení, proto doporučujeme zjistit aktuální informace na <a href="https://obory.fi.muni.cz/bc/">oficiálních stránkách Fakulty informatiky MU</a>.
       </div>
     </div>
 
