fi muni homepage

--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -8,7 +8,7 @@
                       <div class="row row-centered">
                         <a href="mailto:ksi@fi.muni.cz" title="ksi@fi.muni.cz" class="footer-logo inline-footer" id="mail-logo"></a>
                         <a href="https://www.facebook.com/ksi.fi.muni" title="Facebook"class="footer-logo inline-footer" id="facebook-logo"></a>
-                        <a href="https://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo inline-footer" id="fi-logo"></a>
+                        <a href="https://www.fi.muni.cz/" title="Fakulta Informatiky MU" class="footer-logo inline-footer" id="fi-logo"></a>
                         <a href="https://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo inline-footer" id="mu-logo"></a>
                         <a href="https://kscuk.fi.muni.cz/" title="K-SCUK" class="footer-logo inline-footer" id="kscuk-logo"></a>
                         <a href="https://intersob.math.muni.cz" title="Soutěž InterSoB" class="footer-logo inline-footer" id="sob-logo"></a>
