Make about text simply editable.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,99 +1,178 @@
 <section class="container content-section autojustify" style="margin-bottom:40px;">
-    <h2 id="about">O KSI</h2>
-    <p>KSI, neboli Korespondenční seminář z&nbsp;informatiky, je celoroční soutěž organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a&nbsp;procvičit programátorské, matematické a&nbsp;logické myšlení.
-    Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí pokořit hlavní soutěžní úlohy.
-    </p>
+ <h2 id="about">O KSI</h2>
+  <p>
+  KSI, neboli Korespondenční seminář z informatiky, je celoroční soutěž
+  organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem
+  semináře je seznámit řešitele se zajímavými oblastmi informatiky
+  a procvičit programátorské, matematické a logické myšlení. Seminář je
+  uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech
+  procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí
+  pokořit hlavní soutěžní úlohy.
+  </p>
 
 
-    <h3>Jak seminář probíhá?</h3>
-    <p>
-    Středobodem semináře je graf úloh, který se snažíš projít a&nbsp;po cestě vyřešit co nejvíce úloh zvládneš.
-    Některé části grafu představují základní myšlenky, pojmy a&nbsp;postupy a&nbsp;obsahují jednoduché úlohy, jejichž správnost se vyhodnocuje okamžitě automaticky.
-    Jiné obsahují hlavní soutěžní úlohy, na jejichž vyřešení a&nbsp;sepsání máš zhruba jeden měsíc.
-    Po termínu odevzdání se úloha uzamkne, my tvoje řešení opravíme, přidělíme ti za něj body, poskytneme ti k němu zpětnou vazbu a&nbsp;zveřejníme vzorové řešení úlohy.
-    Soutěžní úlohy jsou pak různého charakteru a&nbsp;zatímco nejjednodušší úlohy by po projití úvodních uzlů grafu měl zvládnout každý, nad tou nejtěžší se může zapotit i&nbsp;ostřílený řešitel programátorských soutěží.
-    </p>
-    <p>
-    S&nbsp;ostatními účastníky i&nbsp;organizátory semináře se můžeš během roku potkat na několika výletech.
-    Koncem školního roku pak vyhlásíme výsledky a&nbsp;nejlepší řešitele pozveme na <a href="https://kscuk.fi.muni.cz/">týdenní soustředění K-SCUK</a>.
-    Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60&nbsp;% celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.
-    </p>
+  <h3>Jak seminář probíhá?</h3>
+   <p>
+   Středobodem semináře je graf úloh, který se snažíš projít a po cestě
+   vyřešit co nejvíce úloh zvládneš.  Některé části grafu představují základní
+   myšlenky, pojmy a postupy a obsahují jednoduché úlohy, jejichž správnost se
+   vyhodnocuje okamžitě automaticky.  Jiné obsahují hlavní soutěžní úlohy, na
+   jejichž vyřešení a sepsání máš zhruba jeden měsíc.  Po termínu odevzdání se
+   úloha uzamkne, my tvoje řešení opravíme, přidělíme ti za něj body,
+   poskytneme ti k němu zpětnou vazbu a zveřejníme vzorové řešení úlohy.
+   Soutěžní úlohy jsou pak různého charakteru a zatímco nejjednodušší úlohy by
+   po projití úvodních uzlů grafu měl zvládnout každý, nad tou nejtěžší se
+   může zapotit i ostřílený řešitel programátorských soutěží.
+   </p>
 
-    <h3>Jaké úlohy mám očekávat?</h3>
-    <p>
-    Tvým úkolem ve většině úloh bude řešení algoritmického či programátorského problému.
-    Někdy bude stačit popsat řešení jen obecně pomocí pseudokódu, jindy po tobě budeme chtít i&nbsp;program v&nbsp;Pythonu.
-    Pokud programovat neumíš nebo programuješ v&nbsp;jiném jazyce, nemusíš se ničeho bát.
-    Python tě pomocí cvičných příkladů rychle naučíme.
-    Vždyť přece kolik jazyků umíš, tolikrát jsi člověkem. ;)
-    </p>
-    <p>Některé z&nbsp;našich úloh mohou být složité nebo pracné, i&nbsp;když s&nbsp;dobrým nápadem se většinou dají vyřešit rychle a&nbsp;elegantně. Není třeba vyřešit všechny úlohy &ndash; pošli nám, co zvládneš, a&nbsp;zbytek si po uzavření úlohy můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu kompletně dořešenou. I&nbsp;pokud máš jen nějaké nápady co s&nbsp;ní, napiš nám je a&nbsp;my tvoji snahu určitě oceníme.</p>
+   <p>
+   S ostatními účastníky i organizátory semináře se můžeš během roku potkat na
+   několika výletech.  Koncem školního roku pak vyhlásíme výsledky a nejlepší
+   řešitele pozveme na <a href="https://kscuk.fi.muni.cz/">týdenní soustředění
+   K-SCUK</a>.  Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 %
+   celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez
+   přijímacích zkoušek.
+   </p>
 
-    <h3>Proč se účastnit?</h3>
-    <ul>
-    <li><p>Procvičíš si programátorské, matematické a&nbsp;logické myšlení a&nbsp;schopnost řešit nelehké problémy s&nbsp;využitím počítače. Získáš nové znalosti a&nbsp;naučíš se algoritmy běžně používané v&nbsp;každodenní programátorské praxi.</p></li>
+  <h3>Jaké úlohy mám očekávat?</h3>
+   <p>
+   Tvým úkolem ve většině úloh bude řešení algoritmického či programátorského
+   problému.  Někdy bude stačit popsat řešení jen obecně pomocí pseudokódu,
+   jindy po tobě budeme chtít i program v Pythonu.  Pokud programovat neumíš
+   nebo programuješ v jiném jazyce, nemusíš se ničeho bát.  Python tě pomocí
+   cvičných příkladů rychle naučíme.  Vždyť přece kolik jazyků umíš, tolikrát
+   jsi člověkem. ;)
+   </p>
 
-    <li><p>Naučíš se své myšlenky jasně formulovat a&nbsp;srozumitelně vyjadřovat.</p></li>
+   <p>
+   Některé z našich úloh mohou být složité nebo pracné, i když s dobrým
+   nápadem se většinou dají vyřešit rychle a elegantně. Není třeba vyřešit
+   všechny úlohy &ndash; pošli nám, co zvládneš, a zbytek si po uzavření úlohy
+   můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu
+   kompletně dořešenou. I pokud máš jen nějaké nápady co s ní, napiš nám je
+   a my tvoji snahu určitě oceníme.</p>
 
-    <li><p>Připravíš se na programátorské i&nbsp;jiné soutěže, např. na matematickou olympiádu kategorie&nbsp;P, ale také na budoucí přijímací zkoušky či pohovory. Trénink je základ úspěchu!</p></li>
+  <h3>Proč se účastnit?</h3>
+   <ul>
+    <li>
+     <p>
+     Procvičíš si programátorské, matematické a logické myšlení a schopnost
+     řešit nelehké problémy s využitím počítače. Získáš nové znalosti a naučíš
+     se algoritmy běžně používané v každodenní programátorské praxi.
+     </p>
+    </li>
 
-    <li><p>Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a&nbsp;pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</p></li>
+    <li>
+     <p>Naučíš se své myšlenky jasně formulovat a srozumitelně vyjadřovat.</p>
+    </li>
 
-    <li><p>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</p></li>
+    <li>
+     <p>
+     Připravíš se na programátorské i jiné soutěže, např. na matematickou
+     olympiádu kategorie P, ale také na budoucí přijímací zkoušky či pohovory.
+     Trénink je základ úspěchu!
+     </p>
+    </li>
 
-    <li><p>A&nbsp;hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v&nbsp;podobě <a href="https://kscuk.fi.muni.cz/">týdenního soustředění</a>.</p></li>
+    <li>
+     <p>
+     Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe
+     rozhodnout, co chceš studovat, a pokud se rozhodneš pro informatiku, získáš
+     mírný náskok na své budoucí spolužáky.
+     </p>
+    </li>
 
-    </ul>
+    <li>
+     <p>
+     Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu
+     informatiky MU bez přijímacích zkoušek.
+     </p>
+    </li>
 
-  <h2 id="faq">FAQ</h2>
+    <li>
+     <p>
+     A hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v podobě <a
+     href="https://kscuk.fi.muni.cz/">týdenního soustředění</a>.
+     </p>
+    </li>
 
-    <div class="panel panel-ksi">
-      <div class="panel-heading panel-heading-ksi">Q: Som Slovák. Môžem písať riešenie v&nbsp;slovenčine?</div>
-      <div class="panel-body">
-        A: Jistě. V&nbsp;organizátorském týmu máme dokonce několik Slováků, takže se slovenština občas objeví i&nbsp;v&nbsp;zadání.
-      </div>
+   </ul>
+
+ <h2 id="faq">FAQ</h2>
+
+  <div class="panel panel-ksi">
+    <div class="panel-heading panel-heading-ksi">Q: Som Slovák. Môžem písať
+    riešenie v slovenčine?</div>
+    <div class="panel-body">
+      A: Jistě. V organizátorském týmu máme dokonce několik Slováků, takže se
+      slovenština občas objeví i v zadání.
     </div>
+  </div>
 
-    <div class="panel panel-ksi">
-      <div class="panel-heading panel-heading-ksi">Q: Kdo je úspěšný řešitel semináře?</div>
-      <div class="panel-body">
-        A: Kdokoliv, kdo dosáhne alespoň 60&nbsp;% celkového počtu bodů.
-      </div>
+  <div class="panel panel-ksi">
+    <div class="panel-heading panel-heading-ksi">Q: Kdo je úspěšný řešitel
+    semináře?</div>
+    <div class="panel-body">
+      A: Kdokoliv, kdo dosáhne alespoň 60 % celkového počtu bodů.
     </div>
+  </div>
 
-    <div class="panel panel-ksi">
-      <div class="panel-heading panel-heading-ksi">Q: Dozvěděl jsem se o&nbsp;semináři pozdě, první vlna už proběhla. Je možné se ještě přihlásit do semináře?</div>
-      <div class="panel-body">
-        A: Jistě, do semináře se můžeš přihlásit kdykoli. Pouze se snižuje tvá šance stát se úspěšným řešitelem.
-      </div>
+  <div class="panel panel-ksi">
+    <div class="panel-heading panel-heading-ksi">Q: Dozvěděl jsem se o semináři
+    pozdě, první vlna už proběhla. Je možné se ještě přihlásit do
+    semináře?</div>
+    <div class="panel-body">
+      A: Jistě, do semináře se můžeš přihlásit kdykoli. Pouze se snižuje tvá
+      šance stát se úspěšným řešitelem.
     </div>
+  </div>
 
-    <div class="panel panel-ksi">
-      <div class="panel-heading panel-heading-ksi">Q: Budu-li úspěšný řešitel KSI např. v&nbsp;2.&nbsp;ročníku, budu po maturitě přijat na FI bez přijímaček?</div>
-      <div class="panel-body">
-        A: Téměř určitě ano. Organizátoři KSI ale nemohou hovořit za fakultu v otázce přijímacího řízení, proto doporučujeme zjistit aktuální informace na <a href="https://www.fi.muni.cz/admission/info-bachelor.html.cs">oficiálních stránkách Fakulty informatiky MU</a>.
-      </div>
+  <div class="panel panel-ksi">
+    <div class="panel-heading panel-heading-ksi">Q: Budu-li úspěšný řešitel KSI
+    např. v 2. ročníku, budu po maturitě přijat na FI bez přijímaček?</div>
+    <div class="panel-body">
+      A: Téměř určitě ano. Organizátoři KSI ale nemohou hovořit za fakultu v
+      otázce přijímacího řízení, proto doporučujeme zjistit aktuální informace
+      na <a
+      href="https://www.fi.muni.cz/admission/info-bachelor.html.cs">oficiálních
+      stránkách Fakulty informatiky MU</a>.
     </div>
+  </div>
 
-    <div class="panel panel-ksi">
-      <div class="panel-heading panel-heading-ksi">Q: Mohu řešit KSI i&nbsp;když nejsem student střední školy?</div>
-      <div class="panel-body">
-        A: Ano, KSI může řešit kdokoli.
-      </div>
+  <div class="panel panel-ksi">
+    <div class="panel-heading panel-heading-ksi">Q: Mohu řešit KSI i když
+    nejsem student střední školy?</div>
+    <div class="panel-body">
+      A: Ano, KSI může řešit kdokoli.
     </div>
+  </div>
 
-    <div class="panel panel-ksi">
-      <div class="panel-heading panel-heading-ksi">Q: Jsem v maturitním ročníku, mám šanci být přijat na FI skrze vyřešení KSI?</div>
-      <div class="panel-body">
-        A: Ano, seminář ukončujeme vždy tak, abychom stihli vedení FI poslat seznam úspěšných řešitelů před uzavřením přijímacího řízení.
-        Podej si žádost o prominutí přijímací zkoušky v řádném termínu. Pokud se staneš úspěšným řešitelem KSI, budeš určitě přijat.
-      </div>
+  <div class="panel panel-ksi">
+    <div class="panel-heading panel-heading-ksi">Q: Jsem v maturitním ročníku,
+    mám šanci být přijat na FI skrze vyřešení KSI?</div>
+    <div class="panel-body">
+      A: Ano, seminář ukončujeme vždy tak, abychom stihli vedení FI poslat
+      seznam úspěšných řešitelů před uzavřením přijímacího řízení.  Podej si
+      žádost o prominutí přijímací zkoušky v řádném termínu. Pokud se staneš
+      úspěšným řešitelem KSI, budeš určitě přijat.
     </div>
+  </div>
 
-  <h2 id="calendar">Kalendář akcí KSI</h2>
-    <p>Významné akce KSI, jako Ksílety nebo termíny odevzdání úloh, zaznamenáváme do <a href="https://calendar.google.com/calendar/embed?src=07cn4qi2qm1g3rtpuls78dmsbg%40group.calendar.google.com" target="_blank">Google kalendáře KSI</a>. Tento kalendář si můžeš <a href="https://calendar.google.com/calendar/render?cid=07cn4qi2qm1g3rtpuls78dmsbg@group.calendar.google.com#main_7" target="_blank">importovat</a>.</p>
+ <h2 id="calendar">Kalendář akcí KSI</h2>
+  <p>
+  Významné akce KSI, jako Ksílety nebo termíny odevzdání úloh, zaznamenáváme do
+  <a
+  href="https://calendar.google.com/calendar/embed?src=07cn4qi2qm1g3rtpuls78dmsbg%40group.calendar.google.com"
+  target="_blank">Google kalendáře KSI</a>. Tento kalendář si můžeš <a
+  href="https://calendar.google.com/calendar/render?cid=07cn4qi2qm1g3rtpuls78dmsbg@group.calendar.google.com#main_7"
+  target="_blank">importovat</a>.
+  </p>
 
-    <hr>
-    <p>Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.</p>
+  <hr>
+
+  <p>
+  Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a
+  href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.
+  </p>
 
 </section>
