Make html more compact.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -54,47 +54,37 @@
 
   <h3>Proč se účastnit?</h3>
    <ul>
-    <li>
-     <p>
+    <li><p>
      Procvičíš si programátorské, matematické a logické myšlení a schopnost
      řešit nelehké problémy s využitím počítače. Získáš nové znalosti a naučíš
      se algoritmy běžně používané v každodenní programátorské praxi.
-     </p>
-    </li>
+    </p></li>
 
-    <li>
-     <p>Naučíš se své myšlenky jasně formulovat a srozumitelně vyjadřovat.</p>
-    </li>
+    <li><p>
+     Naučíš se své myšlenky jasně formulovat a srozumitelně vyjadřovat.
+    </p></li>
 
-    <li>
-     <p>
+    <li><p>
      Připravíš se na programátorské i jiné soutěže, např. na matematickou
      olympiádu kategorie P, ale také na budoucí přijímací zkoušky či pohovory.
      Trénink je základ úspěchu!
-     </p>
-    </li>
+    </p></li>
 
-    <li>
-     <p>
+    <li><p>
      Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe
      rozhodnout, co chceš studovat, a pokud se rozhodneš pro informatiku, získáš
      mírný náskok na své budoucí spolužáky.
-     </p>
-    </li>
+    </p></li>
 
-    <li>
-     <p>
+    <li><p>
      Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu
      informatiky MU bez přijímacích zkoušek.
-     </p>
-    </li>
+    </p></li>
 
-    <li>
-     <p>
+    <li><p>
      A hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v podobě <a
      href="https://kscuk.fi.muni.cz/">týdenního soustředění</a>.
-     </p>
-    </li>
+    </p></li>
 
    </ul>
 
