Add rules of KSI.

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -88,6 +88,27 @@
 
    </ul>
 
+  <h3 id="rules">Pravidla semináře</h3>
+   <p>
+   Při řešení úloh, ať už malých, či velkých, dodržuj etická pravidla semináře:
+   </p>
+
+   <ul>
+    <li><p>
+     Řešení musí být zpracována samostatně. Opisování, stejně jako vyzrazení
+     řešení, bude hodnoceno 0 body a diskvalifikací z možnosti stát se pro
+     ročník úspěšným řešitelem (za úspěšné považujeme totiž jen ty, kteří
+     nepodvádějí).
+    </p></li>
+
+    <li><p>
+     Pokud jsi použili při řešení nějaký externí zdroj (literaturu, webovou
+     stránku, apod.), a čerpal jsi odtud nějakou klíčovou myšlenku, nebo třeba
+     kus textu, musíš tento zdroj uvést formou odkazu, na základě kterého
+     budeme moct tento zdroj dohledat.
+    </p></li>
+   </ul>
+
  <h2 id="calendar">Kalendář akcí KSI</h2>
   <p>
   Významné akce KSI, jako Ksílety nebo termíny odevzdání úloh, zaznamenáváme do
