--- a/app/styles/pages/task.scss
+++ b/app/styles/pages/task.scss
@@ -11,7 +11,7 @@
     }
 }
 
-#task-assignment img, #task-solution img {
+#task-assignment img, #task-solution img, #task-module-body img {
     max-width: 100%;
     height: auto;
 }
