--- a/app/styles/components/modules.scss
+++ b/app/styles/components/modules.scss
@@ -31,7 +31,12 @@ li.sortable-placeholder {
 	border: 1px dashed #CCC;
 	background: none;
 }
-
 .mtop20 {
 	margin-top: 20px;
+}
+.mtop15 {
+	margin-top: 15px;
+}
+.mtop5 {
+	margin-top: 5px;
 }
